test/parser/good/unreachable.ks
int main()
{
    return 3;
    int a = 5 + 5;
}