test/parser/bad/invalid_function.ks
int 3 ( void a )
{
    return 0;
}